--- a/equipa.html
+++ b/equipa.html
@@ -111,7 +111,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
         </a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 portfolio-item">
@@ -124,7 +124,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 portfolio-item">
@@ -137,7 +137,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 portfolio-item">
@@ -150,7 +150,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 portfolio-item">
@@ -163,7 +163,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 portfolio-item">
@@ -176,7 +176,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -189,7 +189,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -202,7 +202,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -215,7 +215,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -228,7 +228,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -241,7 +241,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -254,7 +254,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -267,7 +267,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -280,7 +280,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -293,7 +293,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -306,7 +306,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -319,7 +319,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -332,7 +332,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -345,7 +345,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 portfolio-item">
@@ -358,7 +358,7 @@
                 <p>Email</p>
               </div>
             </div>
-            <img class="img-fluid person" src="img/person.jpg" alt="">
+            <img class="img-fluid person" src="img/image.jpg" alt="">
           </a>
         </div>
       </div>
