--- a/sobre.html
+++ b/sobre.html
@@ -7,9 +7,14 @@
     <title>Decisão Essencial|About</title>
   <!--bootstrap css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="owl.carousel.min.css">
-    <link rel="stylesheet" href="owl.theme.default.min.css">
     <link rel="stylesheet" href="sobre.css">
+  <!-- style testemunhos -->
+  <link rel="stylesheet" href="owl.carousel.min.css">
+  <link rel="stylesheet" href="owl.theme.default.min.css">
+  <style type="text/css">
+    .wrapper {width: 100%; overflow: hidden; padding-left: 3rem; padding-right: 3rem;}
+  </style>
+
   </head>
 
 <body>
@@ -147,109 +152,72 @@
     <h1 class="display-4">Testemunhos</h1>
   </div>
   <hr>
-<div id="slides" class="carousel slide" data-ride="carousel" data-interval="false">
-  <ul class="carousel-indicators">
-    <li data-target="#slides" data-slide-to="0" class="active"></li>
-    <li data-target="#slides" data-slide-to="1"></li>
-  </ul>
-<div class="carousel-inner">
-  <div class="carousel-item active">
-    <div class="square container-fluid padding">
-    <div class="row padding text-center">
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Dora Miranda</h4>
-          <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
-          <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+  <!-- carousel -->
+  <div class="wrapper">
+    <div class="owl-carousel owl-theme">
+
+      <div class="item">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Dora Miranda</h4>
+            <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
+            <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">João Sousa</h4>
-          <p class="subtitle">Gestor, Phytoderm</p>
-          <p class="card-text">Os princípios orientaores da Phytoderm e dos seus colaboradores no seu desempenho profissional são: Compromisso com a excelência, Foco nos resultados, Integridade e ética, Meritocracia e Orgulho de pertencer.</p>
+
+      <div class="item">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Dora Miranda</h4>
+            <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
+            <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Eduardo Faustino</h4>
-          <p class="subtitle">Farmacêutico, Farmácia Alvide</p>
-          <p class="card-text">Tomar decisões de gestão em relação ao futuro da Farmácia Alvide implica conhecer, de forma detalhada, cada reta, cada curva, cada obstáculo do caminho percorrido nos meses e nos anos anteriores à tomada de decisão.</p>
+
+      <div class="item">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Dora Miranda</h4>
+            <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
+            <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Diogo Oliveira</h4>
-          <p class="subtitle">Farmacêutico, Farmácia da Amoreira / Farmácia Sto. António</p>
-          <p class="card-text">As farmácias para singrarem têm de ter parceiros competentes e que criem valor.</p>
-          <p class="card-text">A Decisão Essencial é sem dúvida um desses parceiros. Cria valor, cria confiança, cria profissionalismo na gestão!</p>
+
+      <div class="item">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Dora Miranda</h4>
+            <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
+            <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+          </div>
         </div>
       </div>
-    </div>
-    </div>
-  </div>
-</div>
-  <div class="carousel-item">
-    <div class="square container-fluid padding">
-    <div class="row padding text-center">
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Catarina Fonseca</h4>
-          <p class="subtitle">Farmacêutica, Farmácia Normal de Lisboa</p>
-          <p class="card-text">A gestão de uma farmácia, como de todos os negócios, tem de ser eficiente, rigorosa e atualizada.</p>
-          <p class="card-text">Estas são umas das qualidades que definem a equipa da Decisão Essencial com quem trabalho desde o início.</p>
+
+      <div class="item">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Dora Miranda</h4>
+            <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
+            <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">João Sousa</h4>
-          <p class="subtitle">Gestor, Phytoderm</p>
-          <p class="card-text">Os princípios orientaores da Phytoderm e dos seus colaboradores no seu desempenho profissional são: Compromisso com a excelência, Foco nos resultados, Integridade e ética, Meritocracia e Orgulho de pertencer.</p>
+
+      <div class="item">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Dora Miranda</h4>
+            <p class="subtitle">Farmacêutica, Farmácia Miranda</p>
+            <p class="card-text">Nossa parceira na gestão do negócio de farmácia desde a primeira hora, a Decisão Essencial é uma empresa que prima pela competência, pelo dinamismo e pela disponibilidade.</p>
+          </div>
         </div>
       </div>
+
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Eduardo Faustino</h4>
-          <p class="subtitle">Farmacêutico, Farmácia Alvide</p>
-          <p class="card-text">Tomar decisões de gestão em relação ao futuro da Farmácia Alvide implica conhecer, de forma detalhada, cada reta, cada curva, cada obstáculo do caminho percorrido nos meses e nos anos anteriores à tomada de decisão.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-3">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Diogo Oliveira</h4>
-          <p class="subtitle">Farmacêutico, Farmácia da Amoreira / Farmácia Sto. António</p>
-          <p class="card-text">As farmácias para singrarem têm de ter parceiros competentes e que criem valor.</p>
-          <p class="card-text">A Decisão Essencial é sem dúvida um desses parceiros. Cria valor, cria confiança, cria profissionalismo na gestão!</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</div>
-<a class="carousel-control-prev" data-target="#slides" href="#carouselExample" role="button" data-slide="prev">
-    <i class="fa fa-chevron-left fa-lg text-muted"></i>
-    <span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next text-faded" data-target="#slides" href="#carouselExample" role="button" data-slide="next">
-    <i class="fa fa-chevron-right fa-lg text-muted"></i>
-    <span class="sr-only">Next</span>
-</a>
-</div>
+
 </div>
 </div>
 
@@ -327,8 +295,8 @@
   <script src="js/agency.min.js"></script>
   <!-- Owl Carousel-->
   <script src="jquery.min.js"></script>
-  <script src="owl.carousel.js"></script>
-  <script src="sobre.js"></script>
+  <script src="owl.carousel.min.js"></script>
+  <script src="jquery.js"></script>
 
   </body>
 </html>
