--- a/equipa.html
+++ b/equipa.html
@@ -79,7 +79,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>A Nossa Equipa</h1>
-            <span class="subheading">A nossa equipa é uma equipa altamente especializada e focada em tornar o seu Negócio melhor todos os dias.</span>
+            <span class="subheading">A nossa equipa é uma equipa altamente especializada e focada em tornar o seu Negócio melhor todos os dias</span>
           </div>
         </div>
       </div>
@@ -94,10 +94,11 @@
   <div class="row welcome text-center">
     <div class="col-12">
       <h1 class="display-4">Equipa</h1>
+      <p>Aqui vai ficar uma discrição sobre a equipa, o seu tamanho, o que diferencia esta equipa de outras, etc.</p>
     </div>
+    <hr>
   </div>
   </div>
-
   <section  id="portfolio">
     <div class="container">
       <div class="row">
