--- a/carreiras.html
+++ b/carreiras.html
@@ -72,55 +72,54 @@
   </div>
   </nav>
 
-<!-- Footer -->
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <!-- Footer -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
-<footer>
-<div class="container-fluid padding bg-light">
-<div class="row text-center">
-  <div class="space col-md-3">
-    <img src="img/logo3.png" class="logo">
-    <hr class="light">
-    <p>&copy; 2018 Decisão Essencial Lda</p>
-  </div>
-  <div class="height col-md-3">
-    <hr class="light">
-    <h5>Localização</h5>
-    <hr class="light">
-    <p>Rua Manuel Ferreira de Andrade, Nº 29 C</p>
-    <p>1500-416, Lisboa</p>
-  </div>
-  <div class="col-md-3">
-    <hr class="light">
-    <h5>Contactos</h5>
-    <hr class="light">
-    <p>+351000000000/+351967396177</p>
-    <p>Fax: 000000000</p>
-    <p>email@myemail.com/email@myemail.com</p>
-    <p>
-      <div class="social container-fluid padding">
-      <div class="row text-center padding">
-        <div class="col-12 social padding">
-            <a href="https://www.facebook.com/sara.raposeiro"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-skype"></i></a>
+  <footer>
+  <div class="container-fluid padding bg-light">
+  <div class="row text-center">
+    <div class="space col-md-6 col-lg-3">
+      <img src="img/logo3.png" class="logo">
+      <hr class="light">
+      <p>&copy; 2018 Decisão Essencial Lda</p>
+    </div>
+    <div class="height col-md-6 col-lg-3">
+      <hr class="light">
+      <h5>Localização</h5>
+      <hr class="light">
+      <p>Rua Manuel Ferreira de Andrade, Nº 29 C</p>
+      <p>1500-416, Lisboa</p>
+    </div>
+    <div class="col-md-6 col-lg-3">
+      <hr class="light">
+      <h5>Contactos</h5>
+      <hr class="light">
+      <p>+351000000000/+351967396177</p>
+      <p>Fax: 000000000</p>
+      <p>email@myemail.com/email@myemail.com</p>
+      <p>
+        <div class="social container-fluid padding">
+        <div class="row text-center padding">
+          <div class="col-12 social padding">
+              <a href="https://www.facebook.com/sara.raposeiro"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="#"><i class="fa fa-google-plus"></i></a>
+              <a href="#"><i class="fa fa-skype"></i></a>
+          </div>
         </div>
-      </div>
-      </div>
-    </p>
+        </div>
+      </p>
+    </div>
+    <div class="col-md-6 col-lg-3 contact_form">
+      <hr class="light">
+      <h5>Contacte-nos!</h5>
+      <hr class="light">
+      <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+    </div>
   </div>
-  <div class="col-md-3 contact_form">
-    <hr class="light">
-    <h5>Contacte-nos!</h5>
-    <hr class="light">
-    <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
   </div>
-</div>
-</div>
-</footer>
-
+  </footer>
 
 <!---------->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
