--- a/contact_us.html
+++ b/contact_us.html
@@ -164,31 +164,26 @@
 <footer>
 <div class="container-fluid padding bg-light">
 <div class="row text-center">
-  <div class="space col-md-3">
+  <div class="space col-md-6 col-lg-3">
     <img src="img/logo3.png" class="logo">
     <hr class="light">
     <p>&copy; 2018 Decisão Essencial Lda</p>
   </div>
-  <div class="height col-md-3">
+  <div class="height col-md-6 col-lg-3">
     <hr class="light">
     <h5>Localização</h5>
     <hr class="light">
     <p>Rua Manuel Ferreira de Andrade, Nº 29 C</p>
     <p>1500-416, Lisboa</p>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-6 col-lg-3">
     <hr class="light">
     <h5>Contactos</h5>
     <hr class="light">
     <p>+351000000000/+351967396177</p>
     <p>Fax: 000000000</p>
     <p>email@myemail.com/email@myemail.com</p>
-
-    </div>
-    <div class="col-md-3">
-      <hr class="light">
-      <h5>Redes Sociais</h5>
-      <hr class="light">
+    <p>
       <div class="social container-fluid padding">
       <div class="row text-center padding">
         <div class="col-12 social padding">
@@ -200,6 +195,13 @@
         </div>
       </div>
       </div>
+    </p>
+  </div>
+  <div class="col-md-6 col-lg-3 contact_form">
+    <hr class="light">
+    <h5>Contacte-nos!</h5>
+    <hr class="light">
+    <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
   </div>
 </div>
 </div>
