--- a/team.html
+++ b/team.html
@@ -270,28 +270,25 @@
         </div>
 </div>
 
-
-
-
 <!-- Footer -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 <footer>
 <div class="container-fluid padding bg-light">
 <div class="row text-center">
-  <div class="space col-md-3">
+  <div class="space col-md-6 col-lg-3">
     <img src="img/logo3.png" class="logo">
     <hr class="light">
     <p>&copy; 2018 Decisão Essencial Lda</p>
   </div>
-  <div class="height col-md-3">
+  <div class="height col-md-6 col-lg-3">
     <hr class="light">
     <h5>Localização</h5>
     <hr class="light">
     <p>Rua Manuel Ferreira de Andrade, Nº 29 C</p>
     <p>1500-416, Lisboa</p>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-6 col-lg-3">
     <hr class="light">
     <h5>Contactos</h5>
     <hr class="light">
@@ -312,7 +309,7 @@
       </div>
     </p>
   </div>
-  <div class="col-md-3 contact_form">
+  <div class="col-md-6 col-lg-3 contact_form">
     <hr class="light">
     <h5>Contacte-nos!</h5>
     <hr class="light">
