--- a/sobre.html
+++ b/sobre.html
@@ -114,10 +114,10 @@
 <!--Simbolo-->
 <div class="container-fluid padding">
   <div class="row padding simbolo">
-    <div class="col-md-3 col-lg-3 triangle">
+    <div class="col-12 triangle">
       <img class="center responsive" src="img/logosqr.png">
     </div>
-    <div class="col-md-9 col-lg-9 text-triangle">
+    <div class="col-12 text-triangle">
       <h3 class="display-4">Significado do Logotipo</h3>
       <hr width="70%">
       <p>O Símbolo base utilizado, o triângulo com os 3 lados iguais, representa o equilíbrio perfeito, simbolizando a estrutura de Conhecimento, Confiança e Solidez da Decisão Essencial.</p>
@@ -125,9 +125,9 @@
       <p>As cores selecionadas refletem as que são utilizadas nas áreas da saúde e da cura, sendo que o azul também está relacionado com a Comunicação e o verde com o Crescimento.</p>
       <p>Por fim, a figura utilizada dá-nos também a imagem de Crescimento, que é o que pretendemos não só para nós mas sobretudo para os nossos Clientes, pois o Crescimento deles é o nosso Crescimento!</p>
     </div>
-    </div>
   </div>
-  <hr>
+</div>
+<hr>
 
 <!-- Percurso -->
 <div class="container-fluid padding">
@@ -222,27 +222,25 @@
 </div>
 
 
-
-
 <!-- Footer -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 <footer>
 <div class="container-fluid padding bg-light">
 <div class="row text-center">
-  <div class="space col-md-3">
+  <div class="space col-md-6 col-lg-3">
     <img src="img/logo3.png" class="logo">
     <hr class="light">
     <p>&copy; 2018 Decisão Essencial Lda</p>
   </div>
-  <div class="height col-md-3">
+  <div class="height col-md-6 col-lg-3">
     <hr class="light">
     <h5>Localização</h5>
     <hr class="light">
     <p>Rua Manuel Ferreira de Andrade, Nº 29 C</p>
     <p>1500-416, Lisboa</p>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-6 col-lg-3">
     <hr class="light">
     <h5>Contactos</h5>
     <hr class="light">
@@ -263,7 +261,7 @@
       </div>
     </p>
   </div>
-  <div class="col-md-3 contact_form">
+  <div class="col-md-6 col-lg-3 contact_form">
     <hr class="light">
     <h5>Contacte-nos!</h5>
     <hr class="light">
