--- a/connect.html
+++ b/connect.html
@@ -64,19 +64,19 @@
     <footer>
     <div class="container-fluid padding bg-light">
     <div class="row text-center">
-      <div class="space col-md-3">
+      <div class="space col-md-6 col-lg-3">
         <img src="img/logo3.png" class="logo">
         <hr class="light">
         <p>&copy; 2018 Decisão Essencial Lda</p>
       </div>
-      <div class="height col-md-3">
+      <div class="height col-md-6 col-lg-3">
         <hr class="light">
         <h5>Localização</h5>
         <hr class="light">
         <p>Rua Manuel Ferreira de Andrade, Nº 29 C</p>
         <p>1500-416, Lisboa</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <hr class="light">
         <h5>Contactos</h5>
         <hr class="light">
@@ -97,7 +97,7 @@
           </div>
         </p>
       </div>
-      <div class="col-md-3 contact_form">
+      <div class="col-md-6 col-lg-3 contact_form">
         <hr class="light">
         <h5>Contacte-nos!</h5>
         <hr class="light">
@@ -106,7 +106,6 @@
     </div>
     </div>
     </footer>
-
 
     <!---------->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
