--- a/acessoria.html
+++ b/acessoria.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <!--meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Decisão Essencial|About</title>
+    <title>Decisão Essencial | Acessoria</title>
   <!--bootstrap css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="acessoria.css">
@@ -24,7 +25,7 @@
           <a class="nav-link" href="reuniao.html">Marcar Reunião</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="acessoria.html">Acessoria</a>
+          <a class="nav-link active" href="acessoria.html">Acessoria</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="pergunta.html">Faça uma Pergunta</a>
@@ -40,14 +41,14 @@
   <!-- Navigation 2 -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="inicio.html"><img src="img/logosqr.png" class="nav-logo"><img src="img/DE.png" class="nav-DE"></a>
+    <a class="navbar-brand" href="index.html"><img src="img/logosqr.png" class="nav-logo"><img src="img/DE.png" class="nav-DE"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsingNavbar2">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="sobre.html">Sobre Nós</a>
+          <a class="nav-link" href="sobre.html">Sobre Nós</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="equipa.html">Equipa</a>
@@ -103,9 +104,8 @@
         <div class="social container-fluid padding">
         <div class="row text-center padding">
           <div class="col-12 social padding">
-              <a href="https://www.facebook.com/sara.raposeiro"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/decisaoessencial/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/decis%C3%A3o-essencial-lda/"><i class="fa fa-linkedin"></i></a>
               <a href="#"><i class="fa fa-google-plus"></i></a>
               <a href="#"><i class="fa fa-skype"></i></a>
           </div>
