--- a/servicos.html
+++ b/servicos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 <!--meta tags-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>DE|Serviços</title>
+  <title>Decisão Essencial | Serviços</title>
   <!--bootstrap css-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="servicos.css">
@@ -12,65 +13,65 @@
 
   <body>
 
-    <!-- Navbar 1 -->
-    <nav class="navbar navbar1 navbar-expand-sm sticky-top">
-    <div class="container-fluid">
-      <button class="navbar-toggler custom-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsingNavbar1">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsingNavbar1">
-        <ul class="nav navbar-nav navbar1-color ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="reuniao.html">Marcar Reunião</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="acessoria.html">Acessoria</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pergunta.html">Faça uma Pergunta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">210000000</a>
-          </li>
-        </ul>
-      </div>
+  <!-- Navbar 1 -->
+  <nav class="navbar navbar1 navbar-expand-sm sticky-top">
+  <div class="container-fluid">
+    <button class="navbar-toggler custom-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsingNavbar1">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsingNavbar1">
+      <ul class="nav navbar-nav navbar1-color ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="reuniao.html">Marcar Reunião</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="acessoria.html">Acessoria</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pergunta.html">Faça uma Pergunta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">210000000</a>
+        </li>
+      </ul>
     </div>
-    </nav>
+  </div>
+  </nav>
 
-    <!-- Navigation 2 -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="inicio.html"><img src="img/logosqr.png" class="nav-logo"><img src="img/DE.png" class="nav-DE"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsingNavbar2">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre Nós</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="equipa.html">Equipa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="servicos.html">Serviços</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="videos.html">Vídeos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="noticias.html">Notícias</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="carreiras.html">Carreiras</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="outros.html">Outros Negócios</a>
-          </li>
-        </ul>
-      </div>
+  <!-- Navigation 2 -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html"><img src="img/logosqr.png" class="nav-logo"><img src="img/DE.png" class="nav-DE"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsingNavbar2">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="sobre.html">Sobre Nós</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="equipa.html">Equipa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="servicos.html">Serviços</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="videos.html">Vídeos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="noticias.html">Notícias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="carreiras.html">Carreiras</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="outros.html">Outros Negócios</a>
+        </li>
+      </ul>
     </div>
-    </nav>
+  </div>
+  </nav>
 
 <!-- Opening Image -->
 <header class="masthead" style="background-image: url('img/cons_gestao.jpg')">
@@ -335,9 +336,8 @@
         <div class="social container-fluid padding">
         <div class="row text-center padding">
           <div class="col-12 social padding">
-              <a href="https://www.facebook.com/sara.raposeiro"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/decisaoessencial/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/decis%C3%A3o-essencial-lda/"><i class="fa fa-linkedin"></i></a>
               <a href="#"><i class="fa fa-google-plus"></i></a>
               <a href="#"><i class="fa fa-skype"></i></a>
           </div>
@@ -360,13 +360,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <script src="https://use.ontawesome.com/releases/v5.0.8/js/all.js"></script>
-
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-      <!-- Plugin JavaScript -->
-      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
       <!-- Contact form JavaScript -->
       <script src="js/jqBootstrapValidation.js"></script>
