--- a/outros.html
+++ b/outros.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <!--meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Decisão Essencial|About</title>
+    <title>Decisão Essencial | Outras Indústrias</title>
   <!--bootstrap css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="outros.css">
@@ -39,7 +40,7 @@
   <!-- Navigation 2 -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="inicio.html"><img src="img/logosqr.png" class="nav-logo"><img src="img/DE.png" class="nav-DE"></a>
+    <a class="navbar-brand" href="index.html"><img src="img/logosqr.png" class="nav-logo"><img src="img/DE.png" class="nav-DE"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -64,7 +65,7 @@
           <a class="nav-link" href="carreiras.html">Carreiras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="outros.html">Outros Negócios</a>
+          <a class="nav-link active" href="outros.html">Outros Setores</a>
         </li>
       </ul>
     </div>
@@ -74,104 +75,42 @@
   <!-- Indústrias "Portfolio" -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-  <div class="container-fluid padding">
-  <div class="row welcome text-center">
-    <div class="col-12">
-      <h1 class="display-4">Indústrias</h1>
-    </div>
-  </div>
-  </div>
-
-  <section  id="portfolio">
+  <!-- Opening Image -->
+  <header class="masthead" style="background-image: url('img/lapis.jpg')">
+    <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>Outros Setores</h1>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </header>
+
+  <!-- Industrias -->
+  <div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Àreas de Incidência</h1>
+      <hr style="background-color: #b4b4b4;border: 0 none;color: #b4b4b4;height: 2px;width: 70%;">
+    </div>
+    <div class="col-12" style="padding-left:15%;padding-right:15%">
+      <p>Embora nos foquemos sobretudo no setor farmacêutico, temos também outro tipo de clientes na nossa carteira. O nosso trabalho abrange diversas indústrias, incluindo:</p>
+    </div>
+    <div class="col-12" style="padding-left:20%;text-align:left;">
+      <p><u>SAÚDE</u>: farmácias, clínicas, produtos farmacêuticos, laboratórios, cuidados domiciliários;</p>
+      <p><u>EDUCAÇÃO</u>: jardim de infância;</p>
+      <p><u>COMÉRCIO</u>: restauração, comércio alimentar, hotelaria, parques de diversão, equipamento desportivo, intrumentos musicais;</p>
+      <p><u>ALGO</u>: advogados, arquitetos, consultoria, certificação de qualidade, marketing, outsorcing, serviços financeiros;</p>
+      <p><u>ALGO</u>: comunicações, produtos e serviços informáticos;</p>
+      <p><u>ALGO</u>: ourivesarias, papelarias, tabacarias, material de escritório, imobiliárias</p>
+      <p><u>ALGO</u>: fundações, reciclagem;</p>
+      <p><u>ALGO</u>: comércio e reparação de automóveis, fabricação de máquinas.</p>
+    </div>
+  </div>
+  </div>
 
   <!-- Footer -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
@@ -202,9 +141,8 @@
         <div class="social container-fluid padding">
         <div class="row text-center padding">
           <div class="col-12 social padding">
-              <a href="https://www.facebook.com/sara.raposeiro"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/decisaoessencial/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/decis%C3%A3o-essencial-lda/"><i class="fa fa-linkedin"></i></a>
               <a href="#"><i class="fa fa-google-plus"></i></a>
               <a href="#"><i class="fa fa-skype"></i></a>
           </div>
