--- a/sobre.html
+++ b/sobre.html
@@ -73,7 +73,7 @@
         <a class="nav-link" href="carreiras.html">Carreiras</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="outros.html">Outros Negócios</a>
+        <a class="nav-link" href="outros.html">Outros Setores</a>
       </li>
     </ul>
   </div>
