--- a/equipa.html
+++ b/equipa.html
@@ -634,9 +634,13 @@
           <h3>TOMÁS SOUSA</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
-          <p>Com uma mãe farmacêutica Tomás teve sempre curiosidade em ajudá-la com as faturas, recibos e pagamentos. Acabou por licenciar-se em Economia pela Nova SBE em Fevereiro de 2018 e está neste momento a tirar o mestrado em Gestão de Desporto da Faculdade de Motricidade Humana.</p>
-          <p>Estagiou na Decisão Essencial em Agosto de 2016. Tendo gostado do trabalho, da equipa e da forma como foi recebido, voltou a candidatar-se, desta vez para emprego. Entrou para a empresa como trabalhador a tempo inteiro em Abril de 2019, constituindo esta a sua primeira experiência de trabalho.</p>
+          <p>O Tomás tem 23 anos e licenciou-se em Economia na Nova School of Business and Economy em Fevereiro de 2018, estando neste momento a concluir o Mestrado em Gestão do Desporto na Faculdade de Motricidade Humana.</p>
+          <p>Com uma mãe Farmacêutica e proprietária de uma Farmácia, Tomás teve sempre curiosidade em ajudá-la com organização das faturas, recibos e pagamentos.</p>
+          <p>Tendo estagiado na Decisão Essencial durante o mês de Agosto de 2016, integrou-se perfeitamente na equipa, e desde logo manifestou agrado pelo trabalho, e pela forma como foi recebido.</p>
+          <p>Revela uma enorme capacidade de aprendizagem, bem como uma proactividade acima da média, solicitando sempre novas tarefas logo que conclui o que lhe é solicitado.</p>
+          <p>Após a conclusão da Licenciatura contactou a empresa, tendo sido admitido em Abril de 2018, primeiro no âmbito de um Estágio Profissional do IEFP, fazendo atualmente parte dos quadros da Decisão Essencial como trabalhador a tempo inteiro.</p>
           <p>Nos tempos livres Tomás gosta de jogar e ver futebol e estar atento ao que se passa em Portugal e no Mundo, tanto a nível de economia como de notícias mais gerais.</p>
+          <p><a href="tel:111111111">111111111</a></p>
         </div>
       </div>
     </div>
