--- a/equipa.html
+++ b/equipa.html
@@ -640,7 +640,7 @@
           <p>Revela uma enorme capacidade de aprendizagem, bem como uma proactividade acima da média, solicitando sempre novas tarefas logo que conclui o que lhe é solicitado.</p>
           <p>Após a conclusão da Licenciatura contactou a empresa, tendo sido admitido em Abril de 2018, primeiro no âmbito de um Estágio Profissional do IEFP, fazendo atualmente parte dos quadros da Decisão Essencial como trabalhador a tempo inteiro.</p>
           <p>Nos tempos livres Tomás gosta de jogar e ver futebol e estar atento ao que se passa em Portugal e no Mundo, tanto a nível de economia como de notícias mais gerais.</p>
-          <p><a href="tel:111111111">111111111</a></p>
+          <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
         </div>
       </div>
     </div>
