--- a/equipa.html
+++ b/equipa.html
@@ -145,7 +145,7 @@
           <span class="close2">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/teresa_rap.jpg" style="width:100%;max-width:300px">
+              <img src="img/teresa_rap.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>TERESA RAPOSEIRO</h3>
@@ -173,7 +173,7 @@
           <span class="close3">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/bina.jpg" style="width:100%;max-width:300px">
+              <img src="img/bina.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>BALBINA ...</h3>
@@ -201,7 +201,7 @@
         <span class="close4">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/filomena.jpg" style="width:100%;max-width:300px">
+            <img src="img/filomena.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
           </div>
           <div class="col-9 perfil">
             <h3>FILOMENA</h3>
@@ -231,7 +231,7 @@
             <span class="close5">&times;</span>
             <div class="row">
               <div class="col-3">
-                <img src="img/vera.jpg" style="width:100%;max-width:300px">
+                <img src="img/vera.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
               </div>
               <div class="col-9 perfil">
                 <h3>VERA</h3>
@@ -259,7 +259,7 @@
           <span class="close6">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/catarina.jpg" style="width:100%;max-width:300px">
+              <img src="img/catarina.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>CATARINA</h3>
@@ -287,7 +287,7 @@
           <span class="close7">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/david.jpg" style="width:100%;max-width:300px">
+              <img src="img/david.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>DAVID</h3>
@@ -315,7 +315,7 @@
         <span class="close8">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/helder.jpg" style="width:100%;max-width:300px">
+            <img src="img/helder.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
           </div>
           <div class="col-9 perfil">
             <h3>HELDER</h3>
@@ -345,7 +345,7 @@
           <span class="close9">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/joao.jpg" style="width:100%;max-width:300px">
+              <img src="img/joao.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>JOÃO</h3>
@@ -372,7 +372,7 @@
         <span class="close10">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/kristina.jpg" style="width:100%;max-width:300px">
+            <img src="img/kristina.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
           </div>
           <div class="col-9 perfil">
             <h3>KRISTINA</h3>
@@ -400,7 +400,7 @@
       <span class="close11">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/maria.jpg" style="width:100%;max-width:300px">
+          <img src="img/maria.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
         </div>
         <div class="col-9 perfil">
           <h3>MARIA</h3>
@@ -428,7 +428,7 @@
       <span class="close12">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/camoes.jpg" style="width:100%;max-width:300px">
+          <img src="img/camoes.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
         </div>
         <div class="col-9 perfil">
           <h3>MARTA CAMÕES</h3>
@@ -459,7 +459,7 @@
           <span class="close13">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/sa.jpg" style="width:100%;max-width:300px">
+              <img src="img/sa.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>MARTA SÁ</h3>
@@ -486,7 +486,7 @@
         <span class="close14">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/vitorino.jpg" style="width:100%;max-width:300px">
+            <img src="img/vitorino.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
           </div>
           <div class="col-9 perfil">
             <h3>MARTA VITORINO</h3>
@@ -514,7 +514,7 @@
       <span class="close15">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/paulo_card.jpg" style="width:100%;max-width:300px">
+          <img src="img/paulo_card.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
         </div>
         <div class="col-9 perfil">
           <h3>PAULO CARDOSO</h3>
@@ -542,7 +542,7 @@
       <span class="close16">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/sandra.jpg" style="width:100%;max-width:300px">
+          <img src="img/sandra.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
         </div>
         <div class="col-9 perfil">
           <h3>SANDRA</h3>
@@ -573,7 +573,7 @@
           <span class="close17">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/susana.jpg" style="width:100%;max-width:300px">
+              <img src="img/susana.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
             </div>
             <div class="col-9 perfil">
               <h3>SUSANA</h3>
@@ -600,7 +600,7 @@
         <span class="close18">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/teresa_nasc.jpg" style="width:100%;max-width:300px">
+            <img src="img/teresa_nasc.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
           </div>
           <div class="col-9 perfil">
             <h3>TERESA NASCIMENTO</h3>
@@ -628,7 +628,7 @@
       <span class="close19">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/tomas.jpg" style="width:100%;max-width:300px">
+          <img src="img/tomas.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
         </div>
         <div class="col-9 perfil">
           <h3>TOMÁS SOUSA</h3>
