--- a/equipa.html
+++ b/equipa.html
@@ -117,9 +117,9 @@
             <span class="close1">&times;</span>
             <div class="row">
               <div class="col-3">
-                <img src="img/paulo_rap.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+                <img src="img/paulo_rap.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
               </div>
-              <div class="col-9 perfil">
+              <div class="col-9 perfil" style="padding-right:2rem;">
                 <h3>PAULO RAPOSEIRO</h3>
                 <h5>Contabilista Certificado</h5>
                 <hr class="hr_blue">
@@ -145,9 +145,9 @@
           <span class="close2">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/teresa_rap.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/teresa_rap.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>TERESA RAPOSEIRO</h3>
               <h5>Contabilista Certificado</h5>
               <hr class="hr_blue">
@@ -173,9 +173,9 @@
           <span class="close3">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/bina.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/bina.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>BALBINA ...</h3>
               <h5>Recursos Humanos</h5>
               <hr class="hr_blue">
@@ -201,9 +201,9 @@
         <span class="close4">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/filomena.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+            <img src="img/filomena.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
-          <div class="col-9 perfil">
+          <div class="col-9 perfil" style="padding-right:2rem;">
             <h3>FILOMENA</h3>
             <h5>Recursos Humanos</h5>
             <hr class="hr_blue">
@@ -231,9 +231,9 @@
             <span class="close5">&times;</span>
             <div class="row">
               <div class="col-3">
-                <img src="img/vera.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+                <img src="img/vera.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
               </div>
-              <div class="col-9 perfil">
+              <div class="col-9 perfil" style="padding-right:2rem;">
                 <h3>VERA</h3>
                 <h5>Recursos Humanos</h5>
                 <hr class="hr_blue">
@@ -259,9 +259,9 @@
           <span class="close6">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/catarina.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/catarina.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>CATARINA</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
@@ -287,9 +287,9 @@
           <span class="close7">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/david.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/david.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>DAVID</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
@@ -315,9 +315,9 @@
         <span class="close8">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/helder.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+            <img src="img/helder.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
-          <div class="col-9 perfil">
+          <div class="col-9 perfil" style="padding-right:2rem;">
             <h3>HELDER</h3>
             <h5>Contabilista</h5>
             <hr class="hr_blue">
@@ -345,9 +345,9 @@
           <span class="close9">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/joao.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/joao.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>JOÃO</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
@@ -372,9 +372,9 @@
         <span class="close10">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/kristina.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+            <img src="img/kristina.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
-          <div class="col-9 perfil">
+          <div class="col-9 perfil" style="padding-right:2rem;">
             <h3>KRISTINA</h3>
             <h5>Contabilista</h5>
             <hr class="hr_blue">
@@ -400,9 +400,9 @@
       <span class="close11">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/maria.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+          <img src="img/maria.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
         </div>
-        <div class="col-9 perfil">
+        <div class="col-9 perfil" style="padding-right:2rem;">
           <h3>MARIA</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
@@ -428,9 +428,9 @@
       <span class="close12">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/camoes.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+          <img src="img/camoes.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
         </div>
-        <div class="col-9 perfil">
+        <div class="col-9 perfil" style="padding-right:2rem;">
           <h3>MARTA CAMÕES</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
@@ -459,9 +459,9 @@
           <span class="close13">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/sa.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/sa.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>MARTA SÁ</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
@@ -486,9 +486,9 @@
         <span class="close14">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/vitorino.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+            <img src="img/vitorino.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
-          <div class="col-9 perfil">
+          <div class="col-9 perfil" style="padding-right:2rem;">
             <h3>MARTA VITORINO</h3>
             <h5>Contabilista</h5>
             <hr class="hr_blue">
@@ -514,9 +514,9 @@
       <span class="close15">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/paulo_card.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+          <img src="img/paulo_card.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
         </div>
-        <div class="col-9 perfil">
+        <div class="col-9 perfil" style="padding-right:2rem;">
           <h3>PAULO CARDOSO</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
@@ -542,9 +542,9 @@
       <span class="close16">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/sandra.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+          <img src="img/sandra.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
         </div>
-        <div class="col-9 perfil">
+        <div class="col-9 perfil" style="padding-right:2rem;">
           <h3>SANDRA</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
@@ -573,9 +573,9 @@
           <span class="close17">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/susana.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+              <img src="img/susana.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
-            <div class="col-9 perfil">
+            <div class="col-9 perfil" style="padding-right:2rem;">
               <h3>SUSANA</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
@@ -600,9 +600,9 @@
         <span class="close18">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/teresa_nasc.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+            <img src="img/teresa_nasc.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
-          <div class="col-9 perfil">
+          <div class="col-9 perfil" style="padding-right:2rem;">
             <h3>TERESA NASCIMENTO</h3>
             <h5>Contabilista</h5>
             <hr class="hr_blue">
@@ -628,9 +628,9 @@
       <span class="close19">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/tomas.jpg" style="width:100%;max-width:300px;padding-left:3rem;">
+          <img src="img/tomas.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
         </div>
-        <div class="col-9 perfil">
+        <div class="col-9 perfil" style="padding-right:2rem;">
           <h3>TOMÁS SOUSA</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
